# technologies-industrial-programming

./: CMakeLists.txt
PR2/task-1/: Triangle.cpp  Triangle.h  main.cpp
PR2/task-2/: Circle.cpp  Circle.h  main.cpp
PR2/task-3/: Figure.cpp  Figure.h  main.cpp
PR3/task-1/: QuadraticEquation.cpp  QuadraticEquation.h  main.cpp
PR3/task-2-3/: RationalFraction.cpp  RationalFraction.h  main.cpp
PR6/task-1-2/: Cone.cpp  Cone.h  TruncatedCone.cpp  TruncatedCone.h  main.cpp
PR6/task-3/: Bay.cpp  Bay.h  Ocean.cpp  Ocean.h  Sea.cpp  Sea.h  main.cpp
