cmake_minimum_required(VERSION 3.23)
project(technologies_industrial_programming)

set(CMAKE_CXX_STANDARD 14)

add_executable(technologies_industrial_programming
        PR2/task-1/main.cpp PR2/task-1/Triangle.cpp PR2/task-1/Triangle.h PR2/task-2/Circle.cpp PR2/task-2/Circle.h PR2/task-2/main.cpp PR2/task-3/Figure.cpp PR2/task-3/Figure.h)

